--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
 @font-face {
     font-family: "digital-7";
-    src: url("./source/digital-7.ttf");
+    src: url("../source/digital-7.ttf");
 }
 
 :root {
