--- a/css/style.css
+++ b/css/style.css
@@ -256,9 +256,10 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
-    background: radial-gradient(circle, #fff 35%, #eee8 60%, #fff 80%);
-    border-radius: 100%;
+    background: radial-gradient(circle, #fff 35%, #eee8 60%, #ddd 80%);
+    border-radius: 50%;
     clip: rect(0px, 114px, 114px, 57px);
+    /* box-shadow: 20px 20px 40px var(--shadow-color), -15px -15px 35px var(--light-color); */
 }
 .circle .bar .progress {
     position: absolute;
