--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* Import fonts */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400&display=swap');
 @font-face {
-    font-family: "digital-7";
-    src: url("../source/digital-7.ttf");
+    font-family: 'digital-7';
+    src: url('../source/digital-7.ttf');
 }
 
 :root {
@@ -12,277 +12,167 @@
 
     --light-color: #ffffff;
     --shadow-color: #cccccf;
-
-    /* Fonts */
-    --roboto-font: Roboto;
-    --font-style-bold: 700;
 }
 
 body {
-    font-family: "digital-7", sans-serif;
-    font-display: block;
+    font-family: 'digital-7', sans-serif;
     background: var(--light-gray);
-}
-
-.page-head {
-    background: var(--light-gray);
-
-    position: absolute;
-    display: flex;
-    left: 30%;
-    right: 30%;
-    top: 2%;
-    padding: 20px 40px;
-    border-radius: 20px;
-    box-shadow: 20px 20px 40px var(--shadow-color), -20px -20px 40px var(--light-color);
-
-    justify-content: space-between;
-    align-items: center;
-}
-.tittle {
-    height: 40px;
-    padding: 0 30px;
-    font-family: "Roboto", sans-serif;
-    font-size: 35px;
-    color: #31546a;
-    text-decoration: none;
-}
-
-.options {
-    padding: 15px 30px;
-    background: var(--light-gray);
-    border: none;
-    border-radius: 50px;
-
-    color: #808080;
-    text-align: center;
-    outline: none;
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
-
-    box-shadow: -20px -20px 40px var(--light-color), 20px 20px 40px var(--shadow-color);
-}
-.options:hover {
-    box-shadow: -5px -5px 15px var(--light-color), 5px 5px 15px var(--shadow-color);
-}
-.options:active {
-    box-shadow: inset -3px -3px 10px var(--light-color), inset 3px 3px 10px var(--shadow-color);
 }
 
 .box {
     position: absolute;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
-
-    left: 30%;
-    right: 30%;
-    top: 5%;
-    bottom: 2%;
-    margin-top: 8%;
-    z-index: -2;
-
-    background: var(--light-gray);
-    border-radius: 30px;
-    box-shadow: 20px 20px 40px var(--shadow-color), -20px -20px 40px var(--light-color);
-}
-.box-clock {
-    padding: 15px 30px;
-    position: absolute;
-    display: flex;
-    left: 10%;
-    right: 10%;
-    top: 5%;
-    bottom: 70%;
-
-    background: var(--light-gray);
-    border-radius: 30px;
-    box-shadow: 20px 20px 40px var(--shadow-color), -15px -15px 35px var(--light-color);
-}
-.digital-clock {
-    position: absolute;
-    left: 8px;
-    right: 8px;
-    top: 8px;
-    bottom: 8px;
-
-    border: #a8a8a8 solid 2px;
-
-    background: linear-gradient(145deg, #cbd3c5, #afbca2);
-    border-radius: 26px;
-}
-.clock-display {
-    text-align: center;
-    color: #333631;
-}
-.clock-field {
-    margin-top: -21%;
-    display: flex;
-    justify-content: center;
-}
-.clock-field div {
-    display: inline-block;
-    position: relative;
-}
-.clock-field div p {
-    font-size: 90px;
-    position: relative;
-    z-index: 100;
-}
-.clock-field .numbers .placeholder {
-    color: #adb7a4;
-    position: absolute;
-    top: 0;
-    z-index: 50;
-}
-.clock-field .numbers .type {
-    font-size: 15px;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-top: -118%;
-}
-
-.outer-circle {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 230px;
-    width: 230px;
-    bottom: 20%;
-    border-radius: 50%;
-
-    border: var(--light-gray) solid 10px;
-    overflow: hidden;
-    box-shadow: 20px 20px 40px var(--shadow-color),
-                -15px -15px 35px var(--light-color),
-                inset 10px 10px 15px rgba(0, 0, 0, 0.1),
-                inset -10px -10px 15px rgba(255, 255, 255, 0.5);
-}
-
-.outer-circle span {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
-    z-index: -1;
-    filter: blur(30px);
-}
-
-@keyframes animate {
-    0% { 
-        transform: rotate(0deg);
-    }
-    100% { 
-        transform: rotate(360deg);
-    }
-}
-
-.middle-circle {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
-
-    border: var(--light-gray) solid 10px;
-    background: var(--light-gray);
-    box-shadow: 10px 10px 415px rgba(0, 0, 0, 0.1), 
-                -10px -10px 15px rgba(255, 255, 255, 0.5),
-                inset 20px 20px 40px var(--shadow-color),
-                inset -15px -15px 35px var(--light-color);
-}
-.inner-circle {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    border: transparent solid 5px;
-    cursor: pointer;
-    height: 80px;
-    width: 80px;
-    border-radius: 50%;
-
-    background: #e6f8de;
-    box-shadow: 20px 20px 40px var(--shadow-color), -15px -15px 35px var(--light-color);
-    transition: 0.3s ease-out;
-}
-.inner-circle:hover {
-    box-shadow: -5px -5px 15px var(--light-color), 5px 5px 15px var(--shadow-color);
-}
-.play-button {
-    width: 60px;
-    height: 60px;
-}
-
-.restart {
-    padding: 15px 30px;
-    position: absolute;
-    border: none;
-    border-radius: 50px;
-
-    bottom: 5%;
-
-    color: #808080;
-    text-align: center;
-    outline: none;
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
-
-    background: var(--light-gray);
-    box-shadow: -20px -20px 40px var(--light-color), 20px 20px 40px var(--shadow-color);
-}
-.restart:hover {
-    box-shadow: -5px -5px 15px var(--light-color), 5px 5px 15px var(--shadow-color);
-}
-.restart:active {
-    box-shadow: inset -3px -3px 10px var(--light-color), inset 3px 3px 10px var(--shadow-color);
-}
-
-
-.circular {
-    position: relative;
-    height: 114px;
-    width: 114px;
+    left: 10rem;
+    right: 10rem;
+    top: 2rem;
+    bottom: 2rem;
     z-index: 0;
-    transform: scale(2);
-}
-.circular .bar {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: radial-gradient(circle, #fff 35%, #eee8 60%, #ddd 80%);
-    border-radius: 50%;
-    clip: rect(0px, 114px, 114px, 57px);
-    /* box-shadow: 20px 20px 40px var(--shadow-color), -15px -15px 35px var(--light-color); */
-}
-.circle .bar .progress {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    border-radius: 100%;
-    clip: rect(0px, 57px, 114px, 0px);
-}
-.circle .left .progress {
-    z-index: 1;
-    background: linear-gradient(90deg, #f9dc5c, #d44420);
+    background: var(--light-gray);
+    border-radius: 30px;
+    box-shadow: 20px 20px 40px var(--shadow-color), 
+                -20px -20px 40px var(--light-color);
 }
 
-.circle .right {
-    transform: rotate(180deg);
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5em;
+}
+
+
+header p {
+    align-self: center;
+    font-size: 40px;
+    color: #333631;
+    margin: 0%;
+}
+
+header .dropdown {
+    font-family: 'Nunito Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    width: 8.5em;
+    height: 41.59px;
     z-index: 3;
-}
-.circle .right .progress {
-    background: linear-gradient(270deg, #f9dc5c, #d44420);
+    background: #E2E6E9;
+    border-radius: 50px;
+    cursor: pointer;
 }
 
-@keyframes rotateAll {
-    100% {
-        transform: rotate(180deg);
-    }
+header .options-dropdown{
+    display: flex;
+    align-items: center;
+    margin-top: 0.5em;
+    margin-left: 0.5em;
+}
+
+header .dropdown input{
+    font-family: 'Nunito Sans', sans-serif;
+    position: absolute;
+    margin: 1.5em;
+    padding: 0%;
+    font-size: 16px;
+    color: #808080;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+}
+
+header .dropdown i{
+    color: #808080;
+    transition: all 500ms ease-in-out;
+}
+
+.dropdown.show i {
+    transform: rotate(90deg);
+    transition: all 500ms ease-in-out;
+}
+
+.options {
+    position: absolute;
+    top: 80px;
+    width: 8.5em;
+    padding: 0;
+    background: var(--light-gray);
+    border-radius: 30px;
+    box-shadow: 20px 20px 40px var(--shadow-color), 
+                -10px -10px 20px var(--light-color);
+    visibility: hidden;
+    opacity: 0;
+    transition: all 500ms ease-in-out;
+}
+
+.dropdown.show .options {
+    visibility: visible;
+    opacity: 1;
+    transition: all 500ms ease-in-out;
+}
+
+.options li {
+    color: #808080;
+    position: relative;
+    padding: 0.5em 1em;
+    list-style-type: none;
+}
+
+.options li:first-child {
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+}
+
+.options li:last-child{
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+.options li:hover {
+    background-color: #E2E6E9;
+}
+
+.options li a {
+    color: #808080;
+    text-decoration: none;
+}
+
+header .dark-mode {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 136px;
+    background-color: #E2E6E9;
+    color: #808080;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5em;
+}
+
+footer .author-info {
+    display: flex;
+    align-items: center;
+}
+
+footer div a {
+    font-family: 'Nunito Sans', sans-serif;
+    color: #808080;
+    text-decoration: none;
+}
+
+footer .tools {
+    display: flex;
+}
+
+#code-icon {
+    margin-right: 10px;
+}
+
+#settings-icon {
+    margin-left: 20px;
 }
