--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,12 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    left: 10rem;
-    right: 10rem;
-    top: 2rem;
-    bottom: 2rem;
+    min-height: 663px;
+    min-width: 491.33px;
+    left: 10%;
+    right: 10%;
+    top: 1rem;
+    bottom: 1rem;
     z-index: 0;
     background: var(--light-gray);
     border-radius: 30px;
@@ -38,7 +40,7 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    padding: 1.5em;
+    padding: 1.5em 1.5em 1em 1.5em;
 }
 
 
