--- a/css/dark-theme/stopwatchStyleDark.css
+++ b/css/dark-theme/stopwatchStyleDark.css
@@ -7,9 +7,10 @@
     height: 230px;
     width: 230px;
     border-radius: 50%;
-    border: var(--light-gray) solid 10px;
+    border: var(--dark-grey) solid 10px;
     overflow: hidden;
-    box-shadow: 10px 10px 30px var(--shadow-color), -10px -10px 25px var(--light-color), inset 10px 10px 15px rgba(0, 0, 0, 0.1), inset -10px -10px 15px rgba(255, 255, 255, 0.5);
+    box-shadow: 10px 10px 30px var(--shadow-color), -10px -10px 25px var(--light-color), inset 10px 10px 20px var(--shadow-color)/*, inset -10px -10px 15px var(--light-color)*/
+    ;
 }
 
 .outer-circle span {
@@ -17,7 +18,7 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
+    background: linear-gradient(#FF5C15, #D73900, #B00600);
     filter: blur(30px);
     z-index: -1;
 }
@@ -39,9 +40,10 @@
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    border: var(--light-gray) solid 10px;
-    background: var(--light-gray);
-    box-shadow: 10px 10px 415px rgba(0, 0, 0, 0.1), -10px -10px 15px rgba(255, 255, 255, 0.5), inset 20px 20px 40px var(--shadow-color), inset -15px -15px 35px var(--light-color);
+    border: var(--dark-grey) solid 10px;
+    background: var(--dark-grey);
+    box-shadow: 10px 10px 30px var(--shadow-color), /*-10px -10px 15px var(--light-color),*/
+    inset 20px 20px 40px var(--shadow-color), inset -15px -15px 35px var(--light-color);
 }
 
 .inner-circle {
@@ -49,12 +51,13 @@
     align-self: center;
     justify-content: center;
     align-items: center;
-    border: transparent solid 5px;
+    border: 0;
+    /*border: transparent solid 5px;*/
     cursor: pointer;
     height: 80px;
     width: 80px;
     border-radius: 50%;
-    background: #e6f8de;
+    background: #2e3830;
     box-shadow: 20px 20px 40px var(--shadow-color), -15px -15px 35px var(--light-color);
     transition: 0.3s ease-out;
     -webkit-appearance: none;
@@ -71,16 +74,16 @@
 
 .reset-button {
     align-self: center;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Neue Plak W01', sans-serif;
     font-size: 16px;
-    color: #808080;
+    color: var(--text-color);
     padding: 0.8em 2em;
     border-radius: 50px;
-    border: none;
+    border: 2px solid #333;
     outline: none;
     cursor: pointer;
     transition: 0.2s ease-in-out;
-    background: var(--light-gray);
+    background: var(--dark-grey);
     box-shadow: 20px 20px 40px var(--shadow-color), -10px -10px 25px var(--light-color);
 }
 
