--- a/css/dark-theme/styleDark.css
+++ b/css/dark-theme/styleDark.css
@@ -10,20 +10,20 @@
 
 @font-face {
     font-family: 'digital-7';
-    src: url('../source/digital-7.ttf');
+    src: url('../../source/digital-7.ttf');
 }
 
 :root {
     /* Colors */
-    --white: #fff;
-    --light-gray: #f0f0f3;
-    --light-color: #ffffff;
-    --shadow-color: #cccccf;
+    --dark-grey: #2b2b2b;
+    --text-color: #4b4b4b;
+    --light-color: #2e2e2e;
+    --shadow-color: #1a1a1a;
 }
 
 body {
     font-family: 'digital-7', sans-serif;
-    background: var(--light-gray);
+    background: var(--dark-grey);
 }
 
 .box {
@@ -38,10 +38,26 @@ body {
     top: 1rem;
     bottom: 1rem;
     z-index: 0;
-    background: var(--light-gray);
+    background: var(--dark-grey);
     border-radius: 30px;
+    border: 2px solid #333;
+    /*border: 2px solid transparent;
+    background-clip: padding-box;*/
     box-shadow: 20px 20px 40px var(--shadow-color), -20px -20px 40px var(--light-color);
 }
+
+
+/*.box::after {
+    position: absolute;
+    top: -2px;
+    bottom: -2px;
+    left: -2px;
+    right: -2px;
+    background: linear-gradient(-195deg, #4d4d4d, #040404);
+    content: '';
+    z-index: -1;
+    border-radius: 30px;
+}*/
 
 header {
     display: flex;
@@ -53,7 +69,7 @@ header p {
     font-family: 'Neue Plak W01', sans-serif;
     align-self: center;
     font-size: 25px;
-    color: #808080;
+    color: var(--text-color);
     margin: 0%;
 }
 
@@ -64,7 +80,7 @@ header .dropdown {
     width: 8.5em;
     height: 41.59px;
     z-index: 3;
-    background: #E2E6E9;
+    background: #111111;
     border-radius: 50px;
     cursor: pointer;
 }
@@ -82,7 +98,7 @@ header .dropdown input {
     margin: 1.5em;
     padding: 0%;
     font-size: 16px;
-    color: #808080;
+    color: var(--text-color);
     cursor: pointer;
     border: none;
     outline: none;
@@ -90,7 +106,7 @@ header .dropdown input {
 }
 
 header .dropdown i {
-    color: #808080;
+    color: var(--text-color);
     transition: all 500ms ease-in-out;
 }
 
@@ -104,8 +120,9 @@ header .dropdown i {
     top: 80px;
     width: 8.5em;
     padding: 0;
-    background: var(--light-gray);
+    background: var(--dark-grey);
     border-radius: 30px;
+    border: 2px solid #333;
     box-shadow: 20px 20px 40px var(--shadow-color), -10px -10px 20px var(--light-color);
     visibility: hidden;
     opacity: 0;
@@ -122,7 +139,7 @@ header .dropdown i {
     display: flex;
     position: relative;
     padding: 0.5em 1em;
-    color: #808080;
+    color: var(--text-color);
     list-style-type: none;
 }
 
@@ -137,12 +154,12 @@ header .dropdown i {
 }
 
 .options li:hover {
-    background-color: #E2E6E9;
+    background-color: #111111;
 }
 
 .options li a {
     width: 100%;
-    color: #808080;
+    color: var(--text-color);
     text-decoration: none;
 }
 
@@ -151,8 +168,8 @@ header .dark-mode {
     align-items: center;
     justify-content: center;
     width: 136px;
-    background-color: #E2E6E9;
-    color: #808080;
+    background-color: #111111;
+    color: var(--text-color);
     border-radius: 50px;
     cursor: pointer;
 }
@@ -170,16 +187,17 @@ footer .author-info {
 
 footer div a {
     font-family: 'Neue Plak W01', sans-serif;
-    color: #808080;
+    color: var(--text-color);
     text-decoration: none;
 }
 
 footer div button {
-    font-family: 'Neue Plak W01', sans-serif;
-    color: #808080;
+    color: var(--text-color);
+    background: var(--dark-grey);
     border: none;
     outline: none;
     cursor: pointer;
+    -webkit-appearance: none;
 }
 
 footer .tools {
